# math

./: .gitmodules  CMakeLists.txt
include/: Image.hpp  ImageData.hpp  Vec2.hpp  Vec2D.hpp
src/: Image.cpp  ImageData.cpp  Vec2.cpp  Vec2D.cpp
tests/: test_image.cpp
